mkdocs-material/stylesheets/extra.css
.md-flex__cell {
  vertical-align: middle;
}

.md-header-nav__button {
  margin: 0;
  padding: 0;
  padding-top: 0.6rem;
}

.md-header-nav__button > img {
  width: 3rem;
  height: 3rem;
}

.md-header-nav__title {
  padding: 0 1rem;
}

.md-footer-copyright {
  padding: 1.8rem 0;
}
@font-face {
  font-family: 'Bison';
  src: url('../../fonts/Bison-Bold.ttf') format('truetype');
}
@font-face {
  font-family: 'Bozon';
  src: url('../../fonts/ROHH - Bozon Regular.otf') format('opentype');
  font-weight: 400;
}
@font-face {
  font-family: 'Bozon';
  src: url('../../fonts/ROHH - Bozon Bold.otf') format('opentype');
  font-weight: 500;
}
@font-face {
  font-family: 'Bozon';
  src: url('../../fonts/ROHH - Bozon Light.otf') format('opentype');
  font-weight: 300;
}

h1, h2, h3, h4{
  font-family: Roboto;
}
p, h5{
  font-family: Bozon;
}

.md-nav__link--active{
  color: #9c27b0;
  text-decoration: underline;
}

.md-nav__link:hover{
  color: #e137ff;
}



.md-typeset a{
  color: #9c27b0;
}

.md-typeset a:hover{
  color: #e137ff;
}

.md-tabs__link{
  padding-right: 10px;
  padding-left: 10px;
  padding-bottom: 12px;
}

.md-tabs__link--active{
  border-bottom: solid 2px #9c27b0;
  padding-bottom: 12px;
}

.downloadBtn{
  border: solid 1px #9c27b0;
  padding: 7px;
  border-radius: 20px;
  font-size: 12px;
  color: #9c27b0;
  cursor: pointer;
}

.downloadBtn:hover{
  background-color: #9c27b0;
  color: white;
}

img{
  margin: 0 auto;
}

.md-main__inner{
  padding-top: 0;
}
.md-nav__title{
  font-size: 16px;
}

.md-typeset h1{
  margin-bottom: 0;
}
.md-main__inner:before{
  background-color: grey
}

.md-container{
  background-color: rgba(128, 128, 128, 0.04);
}

.md-content{
  background-color: white;
}

.md-sidebar--secondary{
  background-color: white;
}

